--- a/styles.css
+++ b/styles.css
@@ -3,12 +3,12 @@
     background-color: #F00;
   }
 }
-@media screen and (min-width:600px) and (max-width:901px){
+@media  (min-width:600px) and (max-width:901px){
   body{
     background-color:#FF0;
   }
 }
-@media screen and (min-width:900px){
+@media (min-width:900px){
   body{
     background-color:#0F0;
   }
