--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,14 @@
-@media screen and (max-width:600px){
+@media screen and (max-width:600px;){
   body{
     background-color: #F00;
   }
 }
-@media  (min-width:600px) and (max-width:901px){
+@media  (min-width:600px;) and (max-width:901px;){
   body{
     background-color:#FF0;
   }
 }
-@media (min-width:900px){
+@media (min-width:900px;){
   body{
     background-color:#0F0;
   }
