--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
     background-color: #F00;
   }
 }
-@media screen and (min-width:600px) and (max-width:901px){
+@media screen and (min-width:600px){
   body{
     background-color:#FF0;
   }
